--- a/math-ph-9904008/math-ph-9904008-psu.tex
+++ b/math-ph-9904008/math-ph-9904008-psu.tex
@@ -86,7 +86,6 @@ bookmarksopenlevel=10
 \def\bit{\begin{itemize}}
 \def\eit{\end{itemize}}
 \def\dst{\(}
-\def\proof{( {\it Proof} )\quad}
 \def\dem{( {\it Dem.} )\quad}
 %%%%%%%%%%%%% construcciones matematicas
 \def\derpar#1#2{\frac{\partial{#1}}{\partial{#2}}}
@@ -214,7 +213,6 @@ bundles of densities and half-forms.
 In addition, we justify all the steps followed in the geometric
 quantization programme,
  from the standpoint definition to the structures which are successively
-
 introduced.
 \end{abstract}
 
@@ -243,7 +241,6 @@ following an appropriate procedure, which is called {\it quantization}
 of the system.
 
 In Theoretical Physics, there are different ways to quantize a classical
-
 theory;
 such as,  {\it canonical quantization}, {\it Feynmann-path integral
 quantization}
@@ -313,11 +310,9 @@ their choice,
 that is, it is not invariant under canonical transformations.
 In addition, the result of quantization depends on the
 order on which $q^j$ and $p_j$ appear in the expression of the classical
-
 observables.
 \item
 The procedure is easy for simple systems, but serious difficulties arise
-
 when we deal with
 constrained systems or systems with internal degrees of freedom.
 \item
@@ -336,7 +331,6 @@ classical and quantum mechanics from a geometrical point of view,
 taking as a model the canonical quantization method.
 In this sense, it is a theory which removes
 some ambiguities involved in the canonical quantization procedure. Thus,
-
 for instance:
 \begin{itemize}
 \item
@@ -352,7 +346,6 @@ procedure.
 It clarifies the analogies between the mathematical
 structures involved in classical and quantum theories.
 \end{itemize}
-
 On the other hand, a relevant feature
 of geometric quantization is its close relationship
 with the theory of irreducible unitary representations of Lie groups
@@ -445,7 +438,6 @@ manifolds merely,
 but Poisson manifolds. As a generalization of these ideas, quantization
 of
 {\it Jacobi manifolds}  has been also considered recently \cite{CLM-96},
-
 \cite{LMP-97}.
 The interest of this topic is that, from the mathematical point of view,
 
@@ -479,7 +471,6 @@ bundles of densities and half-forms.
 The justification of all the steps followed in the geometric
 quantization programme,
  from the standpoint definition to the structures which are successively
-
 introduced.
 \end{itemize}
 Next, we give some indications on the organization of the paper.
@@ -663,12 +654,10 @@ We can summarize this discussion in the following postulate:
 
 \begin{post}
 In the framework of Quantum Mechanics, a physical system is described by
-
 a
 {\it separable (complex) Hilbert space} $\H$.
 Every state of this system at time $t$ is represented by a
 {\it ray} $|\psi (t) \rangle_{\Complex}$ belonging to the Hilbert space.
-
 Any element $|\psi (t) \rangle $ (different from zero) of this ray is
 called a {\rm vector state}.
 \label{pos1}
@@ -679,7 +668,6 @@ called a {\rm vector state}.
 There is a one-to-one correspondence between
 the states in this postulate and the so-called
 {\it pure states} in several axiomatic formulations of Quantum Mechanics
-
 \cite{Mk-mfqm}, \cite{Mo-qmdo}, \cite{Se-pgqm}, \cite{Vn-mfqm},
 \cite{Wl-tgqm}.
 This correspondence is established in the following way:
@@ -713,7 +701,6 @@ operators
 can be ignored hereafter since they are not important
 for the purposes of geometric quantization.
 }
-
 The result of a measure of a quantum observable
 is an eigenvalue of the corresponding operator.
 \label{pos2}
@@ -841,7 +828,6 @@ vector fields in $M$
 (notice that, in general, the subset $\{ f'_i \}$ is not a global
 system of coordinates on $M$, since this would imply that $M$
 is parallelizable. As a consequence, this notion is used only locally by
-
 means
 of canonical systems of coordinates).
 Therefore, if $\{ {\varphi_i}_t \}$ are local one-parameter
@@ -904,8 +890,8 @@ or $F=\H$ if $\lambda\not= 0$.
 It is interesting to point out that if the operators
 $\Op_j$ and $\Op$ are continuous, then the converse also holds
 (see, for instance, \cite{Dd-ea} and \cite{La-ra}).
-
 Taking into account the above discussion, we will demand:
+\medskip
 
 \noindent
 {\bf Irreducibility postulate (first version)}
@@ -916,7 +902,8 @@ observables
 (which implies that the Hilbert space $\H$ is irreducible
 under the action of the set $\{ \Op_{f_j} \}$).}
 
-{\bf Comment}:
+\medskip
+\noindent{\bf Comment}:
 \begin{itemize}
 \item
 Let $M=\Real^{2n}$ be the classical phase space,
@@ -1003,7 +990,7 @@ which means that the``transition probabilities'' are conserved.
 \end{definition}
 %
 \goodbreak
-{\bf Comments}:
+\noindent{\bf Comments}:
 \begin{itemize}
 \item
 Incidentally, we can point out that
@@ -1090,6 +1077,7 @@ picture).
 \end{itemize}
 Then, we can state the following version of the
 irreducibility postulate:
+\medskip
 
 \noindent
 {\bf Irreducibility postulate (second version)}
@@ -1139,7 +1127,6 @@ the maximal set of them is the group of projective unitary
 transformations ${\bf PU}(\H )$.
 Then, the question can be generalized in the following terms:
 {\it if $(M,\Omega )$ represents the classical phase space of a physical
-
 system
 and $\H$ is the Hilbert space for the quantum description,
 are the groups ${\bf Sp}(M,\Omega )$ and ${\bf PU}(\H )$ isomorphic?}.
@@ -1232,7 +1219,6 @@ If $\{ f_j \}$ is a complete set of classical observables
 of $(M,\Omega )$, then $\H_Q$ has to be irreducible
 under the action of the set $\{ \Op_{f_j} \}$.
 Alternatively, suppose $G$ is a group of symmetries of a physical system
-
 both for the classical and the quantum descriptions.
 If $G$ acts transitively on $(M, \Omega )$,
 then $\H_Q$ provides an irreducible representation space
@@ -1296,9 +1282,7 @@ afterwards).
 \section{Hermitian line bundles}
 
 
-Before starting the explanation of the geometric quantization programme,
-
-several geometric tools (which are basic in this task)
+Before starting the explanation of the geometric quantization programme,several geometric tools (which are basic in this task)
 have to be known. This section deals with
 the study and development of all these concepts.
 General references are  \cite{Bl-gq}, \cite{Ga-83}, \cite{Ko-70} and
@@ -1364,14 +1348,10 @@ Two complex line bundles $(L,\pi ,M)$ and $(L',\pi ',M)$
 are said to be {\rm equivalent} if there exists a fiber diffeomorphism
 $\phi : L \to L'$ such that the restrictions to the fibers
 $\phi_m : L_m \to L_m'$ are $\Complex$-linear and the induced map on $M$
-
-is the identity.
-
-In this case, we can construct trivializations with the same
+is the identity. In this case, we can construct trivializations with the same
 transition functions, since they can be carried from one to the other
 by means of the diffeomorphism.
 We denote by ${\bf L}(M)$ the set of equivalence classes of complex line
-
 bundles.
 \label{clbe}
 \end{definition}
@@ -1449,7 +1429,7 @@ ${\bf L}(M) \longrightarrow \check{H}^1 (M,{\cal F}^*)$
 is a group isomorphism.
 \label{indep}
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 The independence of the trivialization
 is a consequence of the fact that
 the union of two trivializations is
@@ -1487,7 +1467,7 @@ The group ${\bf L}(M)$ is canonically isomorphic to $
 \check{H}^2(M,\Zahl )$.
 \label{cais}
 \end{teor}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 It is a consequence of the last proposition and the above arguments.
 \qed
 
@@ -1566,7 +1546,7 @@ and the connection $\nabla$.
 $(\nabla_Xs)(m)$ depends only on $X_m$ and on the germ of $s$ in $m$.
 \label{depen}
 \end{prop}
-{\bf Proof}:  If $s$ has null germ in $m$, then it vanishes
+\noindent{\bf Proof}:  If $s$ has null germ in $m$, then it vanishes
 in a neighborhood $U$ of $m$. Let $f \in {\cal F}^0$ be null in an
 open set $V \subset U$ and taking the value equal to $1$ in the
 complementary of an open set $W$ contained in $U$, such that $V
@@ -1629,7 +1609,6 @@ for the covariant derivative of a section:
 (X(f) + 2\pi i \langle X,\omega^l  \rangle f) s_l
 \label{expcon}
 \eeq
-
 The family
 $\{ U_l,\omega^l  \}$
 is called
@@ -1663,8 +1642,7 @@ $$
 $$
 \label{clacur}
 \end{prop}
-{\bf Proof}: 
-Taking a trivialization
+\noindent{\bf Proof}: Taking a trivialization
 $\{ U_l,s_l \}$,
 in the open set $U_l$ we have
 $$
@@ -1797,7 +1775,7 @@ $\alpha (X)$ is real, for every real vector field. And so on.
 }
 \label{cureal}
 \end{prop}
-{\bf Proof}:  We are going to see it for trivializing
+\noindent{\bf Proof}:  We are going to see it for trivializing
 neighborhoods. So, let $\{ U_l,s_l \}$ be a trivialization, $\{
 \omega^l  \}$ the connection forms of $\nabla$ on $\{ U_l \}$ and
 $X$ a real vector field; we have \beann X(\h (s_l,s_l)) &=& \h
@@ -1821,7 +1799,8 @@ that is, $\d\omega^l $ is real,
 for every $l$ and thus the curvature $\curv$ is real.
 \qed
 %
-{\bf Comments:}
+\medskip
+\noindent{\bf Comments:}
 Let $(L,\pi ,M)$ be a complex line bundle
 with hermitian metric $\h$ and hermitian connection $\nabla$.
 \begin{enumerate}
@@ -1859,7 +1838,6 @@ on $M$.
 The necessary and sufficient condition for $\curv $ to be the curvature
 $2$-form
 of a hermitian connection $\nabla$ on a complex line bundle $(L,\pi ,M)$
-
 endowed with a hermitian metric is that the cohomology class
 $[\curv ] \in H^2(M,\Real )$ is integer, that is, the \v{C}ech
 cohomology class
@@ -2016,12 +1994,12 @@ On the other hand,
 \h (\nabla_X s,s')\vert_{U_l}(m)
 &=&
 \h ((Xf_l )s_l + 2 \pi i f_l\omega^l  (X)
- s_l ,f_l 's_l )\vert_{U_l}(m)=
+ s_l ,f_l 's_l )\vert_{U_l}(m)\\ &=&
 ((Xf_l )\bar f_l ' + 2 \pi i f_l\omega^l  (X) \bar f_l ')(m)
 \\
 \h (s,\nabla_Xs')\vert_{U_l}(m)
 &=&
-(\h (f_l s_l ,(Xf_l ')s_l+ 2 \pi i f_l '\omega^l(X) s_l))(m)=
+(\h (f_l s_l ,(Xf_l ')s_l+ 2 \pi i f_l '\omega^l(X) s_l))(m)\\ &=&
 (f_l (X \bar{f_l '}) -  f_l 2 \pi i \bar{f_l '}\omega^l  (X))(m)
 \eeann
 because $\omega^l  (X)$ is real. Therefore
@@ -2062,7 +2040,7 @@ acts freely and transitively on the set
 ${\rm Con}(L)$.
 \end{prop}
 
-{\bf Comments:}
+\noindent{\bf Comments:}
 \begin{itemize}
 \item
 An equivalent way of stating the above proposition is the following:
@@ -2179,7 +2157,7 @@ If $\nabla '$ is the connection induced by
 $\nabla$ and the diffeomorphism $\phi$,
 then both connections have the same curvature.
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}:
 Let $\{ U_j,s_j \}$ and $\{ U_j,s'_j \}$ be
 trivializing systems of $L$ and $L'$.
 We have
@@ -2213,7 +2191,7 @@ $$
 hence $\d \omega^j = \d \omega^{,j}$; and the result follows.
 \qed
 
-{\bf Comments:}
+\noindent{\bf Comments:}
 \begin{enumerate}
 \item
 Observe that if $\nabla '$ is induced by $\nabla$ and $\phi$,
@@ -2314,7 +2292,7 @@ by $\nabla$ and $\phi$.
 \label{lbce}
 \end{definition}
 
-{\bf Comment:}
+\noindent{\bf Comment:}
 Observe that, if
 $(L,\nabla ) \simeq (L',\nabla ')$
 by the diffeomorphism $\phi$,
@@ -2388,7 +2366,7 @@ then $\h_1(l_1,l_2) = \h_2(\phi (l_1),\phi (l_2))$;
 that is $\h_1 = \phi^*\h_2$.
 \end{description}
 \end{lem}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 \begin{description}
 \item[{\rm (a)}]
 Let $z \in \Complex$ with $\h_1(z,z)=1$
@@ -2434,7 +2412,7 @@ the connection induced by $\phi$ on $L'$,
 is hermitian with respect to $\h '$.
 \label{llprim}
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 We have that
 $\nabla ' \circ \Gamma (\phi ) =
 ({\rm id} \otimes \Gamma (\phi )) \circ \nabla$,
@@ -2460,7 +2438,7 @@ X(\h (\sigma ,\sigma '))=
 \eeann
 \qed
 
-{\bf Comments:}
+\noindent{\bf Comments:}
 \begin{enumerate}
 \item
 The last proposition proves that it is irrelevant
@@ -2489,7 +2467,7 @@ hermitian if, and only if, the function $\varphi \colon M \to
 \Complex^*$ relating the connection forms of $\nabla_1$ and
 $\nabla_2$ has constant module. \label{ll}
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 Let $\{ U_j,s_j \}$ be  a trivializing system
 with $\h (s_j,s_j) = 1$.
 We have that
@@ -2539,7 +2517,7 @@ where $\sim$ is the equivalence of hermitian connections.
 \begin{lem}
 $B^1(M) \subset C \subset Z^1(M)$.
 \end{lem}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 Consider $f \in {\mit\Omega}^0(M)$. Then $\d f \in B^1(M)$.
 Let $\varphi \colon M \to \Complex^*$ be the map
 defined by $\varphi := e^{2\pi if}$.
@@ -2572,7 +2550,7 @@ The morphism
 $\varepsilon^1 \colon \check H^1(M,\Zahl ) \to \check H^1(M,\Real )$
 (induced by $\varepsilon$) is injective.
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 Consider the exact sequence of constant sheaves over $M$:
 $$
 0 \to \Zahl \map{\varepsilon} \Real \map{e} S^1 \to 0
@@ -2623,7 +2601,6 @@ $\check H^1(M,\Zahl )$ in $H^1(M,\Real )$
 by $\alpha \circ \varepsilon^1$,
 this subgroup is characterized in the following way:
 $[\eta ] \in H^1(M,\Zahl )$ if, and only if, there exists a contractible
-
 covering
 $\{ U_j \}$ of $M$ and functions $f_j \colon U_j \to \Real$ such that
 $\d f_j = \eta \mid_{U_j}$ and $f_j-f_k \mid_{U_{jk}} \in \Zahl$;
@@ -2634,7 +2611,7 @@ Taking this into account we can characterize the group
 \begin{prop}
 \dst\frac{C}{B^1(M)}\) is isomorphic to $H^1(M,\Zahl )$.
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 According to the definition of $C$, we have a natural injection
 $$
 \frac{C}{B^1(M)} \to \frac{Z^1(M)}{B^1(M)} = H^1(M,\Real )
@@ -2943,7 +2920,7 @@ $$
 \Op_f\sta := -i\hbar X_f(\psi)
 $$
 
-Nevertheless, the map
+\noindent Nevertheless, the map
 $$
 \begin{array}{cccccc}
 O:&{\mit\Omega}^0 (M)&\to &{\cal X}_H(M)&\to &{\cal O}(\C (M))
@@ -2971,7 +2948,7 @@ $$
 \Op_f\sta := -i\hbar X_f(\psi) +f\psi
 $$
 
-Now the properties (i-iii) hold but not (iv) because $$
+\noindent Now the properties (i-iii) hold but not (iv) because $$
 [\Op_f,\Op_g]\sta = \hbar^2 [X_f,X_g](\psi) - 2i\hbar \{ g,f\}
 (\psi )= i\hbar (-i\hbar X_{\{ f,g\}} + 2\{ f,g\} )(\psi) \not=
 i\hbar \Op_{\{ f,g\}}\sta $$ Therefore, a new correction is
@@ -2982,7 +2959,6 @@ local {\it symplectic potential}, i.e., $\Omega = \d \theta$
 and so, for every $\psi \in \C (M)$, \beq \Op_f\sta := -i\hbar
 (X_f + \frac{i}{\hbar}\langle X_f |\theta \rangle ) (\psi )+f\psi
 \label{opersta} \eeq
-
 Now, (i-iv) hold (see the proof of theorem \ref{prop})
 and, at the moment, this is the final form of the quantum operator
 associated with the classical observable $f$.
@@ -3228,8 +3204,7 @@ hermitian metric in $(L,\pi ,M)$
 if, and only if, $\theta -\bar \theta$ is an exact $1$-form.
 \label{ihm}
 \end{teor}
-\proof
-See \cite{Ko-70}, p. 110.
+\noindent{\bf Proof}: See \cite{Ko-70}, p. 110.
 \qed
 
 A new problem arises now: the integral (\ref{inprod1})
@@ -3272,12 +3247,11 @@ satisfies part (b) of definition \ref{fquan}.
 The assignment $f \mapsto \Op_f$ is a $\Real$-linear map from
 the Poisson algebra of the functions ${\mit\Omega}^0(M)$
 into the Lie algebra of the self-adjoint operators of $\H_P$, satisfying
-
 the properties
 b(i-iv) of definition \ref{fquan}.
 \label{prop}
 \end{teor}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 In order to see that the operator $\Op_f$ is self-adjoint we calculate:
 \beann
 \langle \Op_f(\psi ) | \psi' \rangle
@@ -3494,7 +3468,6 @@ Hence, the last ones do not form a
 complete set of commuting observables and,
 as a consequence, there exists some non-empty closed subspace
 of $\H_P$ different from $\H_P$ which is invariant with respect to their
-
 action.
 So that, the condition (v) of definition \ref{fquan} does not hold for
 these systems.
@@ -3557,7 +3530,6 @@ induced in $M$ by this distribution, that is,
 \nabla_\P \psi = 0
 \label{inv}
 \eeq
-
 Now, let $U \subset M$ be an open set
 in which $L$ trivializes and let
 $s \colon U \to L$ be a trivializing section.
@@ -3828,7 +3800,7 @@ We have that:
 \begin{prop}
 $\ker \hat \h = \P \cap \bar \P$
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 In fact $\P \cap \bar\P \subset \ker \hat \h$ because $\P$ is isotropic.
 
 On the other side, for every $X \in \P$, if $X \in \ker \hat \h$, then
@@ -3897,7 +3869,7 @@ endowed with a hermitian connection $\nabla$.
 If $\P$ is a strongly integrable polarization
 then it is admissible for the connection $\nabla$.
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 See \cite{Ra-77}.
 \qed
 
@@ -3943,7 +3915,7 @@ If ${\cal J}$ exists, then $(M,{\cal J})$ is said to be an
 {\rm almost-complex manifold}.
 \end{definition}
 
-{\bf Comment:}
+\noindent{\bf Comment:}
 \begin{itemize}
 \item
 The existence of an almost-complex structure
@@ -4021,7 +3993,7 @@ $$
  -\left(\derpar{}{x_j}\right)_m
 $$
 
-Then $(M,{\cal J})$ is a {\rm complex manifold}.
+\noindent Then $(M,{\cal J})$ is a {\rm complex manifold}.
 \end{definition}
 
 If ${\cal J}$ is a complex structure, then
@@ -4073,7 +4045,7 @@ $$
 $$
 \end{description}
 
-Equivalently, we can say that a K\"ahler manifold
+\noindent Equivalently, we can say that a K\"ahler manifold
 is an almost-K\"ahler manifold for which
 the complex distributions $\P$ and $\bar \P$ are integrable.
 \end{definition}
@@ -4095,7 +4067,7 @@ then there is a complex structure ${\cal J}$ defined in $M$
 which is compatible with $\Omega$,
 and therefore, $(M,\Omega ,{\cal J})$ is a K\"ahler manifold.
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 The first part of the proposition is immediate.
 
 For the second one we have that
@@ -4148,7 +4120,7 @@ $$
 {\rm k} ({\cal J}X,{\cal J}Y) = {\rm k} (X,Y)
 $$
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 To prove that this is a non-degenerate hermitian metric is immediate.
 For the compatibility with ${\cal J}$, remember that
 $\Omega$ is compatible with ${\cal J}$, hence
@@ -4161,7 +4133,7 @@ $\Omega$ is compatible with ${\cal J}$, hence
 ={\rm g}(X,Y) - i\Omega (X,Y) := {\rm k} (X,Y)
 \eeann
 \qed
-{\bf Comments:}
+\noindent{\bf Comments:}
 \begin{itemize}
 \item
 It is interesting to point out that if ${\rm k}$ is not positive
@@ -4281,7 +4253,7 @@ then there exist a local basis of $D$
 made up of Hamiltonian vector fields.
 \label{blh}
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 Let $\{ X_1,\ldots ,X_n \}$ be a basis of $D$
 in an open set $V \subset M$.
 The differential $1$-forms
@@ -4497,7 +4469,7 @@ $$
 \leq C(K) \langle \psi \mid \psi \rangle
 $$
 \end{lem}
-{\bf Proof}:
+\noindent{\bf Proof}:
 Given $K \subset U_\alpha$, consider $\delta >0$ such that,
 for every $p \in K$,
 $B'(p,2\delta ) := \phi_\alpha^{-1}(B(\phi_\alpha (p),2\delta ))$
@@ -4564,7 +4536,7 @@ If $\P$ is a K\"ahler polarization,
 then $\Gamma_{hol}(L)$ is a closed subspace of $\H_P$,
 and hence $\Gamma_{hol} (L)$ is also a Hilbert space.
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 Let $\{ \psi_k \}$ be a Cauchy sequence in $\Gamma_{hol}(L)$,
 that is,
 $$
@@ -4633,7 +4605,7 @@ for every $\psi \in \Gamma_\P (L)$,
 \eeq
 \end{definition}
 
-There are different ways of characterizing the functions
+\noindent There are different ways of characterizing the functions
 $f$ representing the quantizable classical observables.
 In order to obtain them and establish their equivalence
 with the above definition we need to prove that:
@@ -4742,7 +4714,7 @@ in a straightforward way from
 (\ref{uno}).
 \qed
 
-Now, we can prove that:
+\medskip\noindent Now, we can prove that:
 
 \begin{prop}
 The following statements are equivalent:
@@ -4760,7 +4732,7 @@ $[X_f,\P] \subset \P$.
 \end{enumerate}
 \label{cnspo}
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 \begin{enumerate}
 \item
 The condition
@@ -4943,7 +4915,7 @@ $$
 2\hbar \left( z_j\derpar{}{z_j}-\bar z_j \derpar{}{\bar z_j} \right)
 $$
 
-This way of quantizing is known as the {\it holomorphic} or {\it
+\noindent This way of quantizing is known as the {\it holomorphic} or {\it
 Bargman-Fock representation}
 of $(\Tan^* Q, \Omega )$. On the contrary, if the polarization used is
 the holomorphic one
@@ -4993,7 +4965,6 @@ or the adapted one
 $$
 \theta = \frac{i}{2}\bar z_j\d z_j
 $$
-
 Using the first one, the polarized sections
 (eigenstates of the system) are
 $$
@@ -5027,7 +4998,6 @@ It is also immediate to observe that
 \Op_H\sta &=& \hbar\left( z_j\derpar{\psi}{z_j} -\bar
 z_j\derpar{\psi}{\bar z_j}\right) = \hbar z_j \derpar{F}{z_j}
 \eeann
-
 Now, the problem of quantization of the harmonic oscillator
 is almost solved. It remains to obtain the
 energy spectrum. In order to make it,
@@ -5075,7 +5045,6 @@ the so-called {\it metaplectic correction}
 
 As we have already pointed out in the above section,
 the set $\Gamma_\P (L)$ of polarized sections are not necessarily square
-
 integrable;
 and, in addition, if $\psi_1,\psi_2 \in \Gamma_\P (L)$,
 the inner product $\langle \psi_1 | \psi_2 \rangle$
@@ -5120,7 +5089,6 @@ j(k) := \left(\frac{2\pi i k}{n},e^{-\frac{2\pi i k}{n}}I\right)
 p(u,A) := e^{u}A
 $$
 On the other hand, if $p(z,A)=I$, then $e^{z}A=I$, hence $A=e^{-z}I$ and
-
 therefore
 $(z,A)=(z,e^{-z}I)$. Since $1=det\, (e^{-z}I=e^{-zn}$, then \dst
 z=\frac{2\pi i k}{n}\) ,
@@ -5322,12 +5290,10 @@ P \times \GL & \mapping{\iota} & P
 \end{array}
 $$
 where $\iota , \bar \iota$ are the actions of the groups on the bundles,
-
 and such that $\bar \rho$ is a double covering.
 \label{amfb}
 \end{definition}
-
-Now, given a principal fiber bundle $(P,p,M)$ with structural group
+\noindent Now, given a principal fiber bundle $(P,p,M)$ with structural group
 $\GL$,
 we can ask when a metalinear associated bundle exists and,
 in this case, if it is unique. We will answer these questions
@@ -5378,7 +5344,6 @@ $(U_i,s_i)$ used, nor on the liftings $\bar g_{ij}$ constructed.
 It is a cohomology class associated with $p\colon P \to M$.
 \item
 A $\GL$-principal fiber bundle $(P,p,M)$ admits an associated metalinear
-
 bundle
 if, and only if, $c(P)=0$. Then:
 
@@ -5407,10 +5372,10 @@ acts freely and transitively on the set of equivalence classes of
 metalinear fiber bundles associated with $P$.
 \end{enumerate}
 
-A last question is to find the condition for a function $\bar f\colon
+\noindent A last question is to find the condition for a function $\bar f\colon
 \bar P \to \Complex$
 to be $\bar \rho$-projectable.
- The necessary and sufficient condition for this is that, if
+The necessary and sufficient condition for this is that, if
  $\bar a,\bar b \in \bar P$ and
  $\bar \rho (\bar a) = \bar \rho (\bar b)$,
  then $\bar f(\bar a) = \bar f(\bar b)$.
@@ -5465,7 +5430,7 @@ the bundle structure is unique.
 $M$ is orientable if, and only if, $L$ is trivial.
 \label{jusfo}
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 $(\Longrightarrow)$ \quad
 If $M$ is orientable then there is an atlas with changes of coordinates
 with positive jacobians,
@@ -5473,7 +5438,6 @@ therefore $f_{\alpha \beta}$ are the identity and, then $L$ trivializes.
 
 $(\Longleftarrow)$ \quad
 If $L$ trivializes, there exists a trivializing covering with transition
-
 functions
 $g_{\alpha \beta}$ which are the identity, that is, $M$ is orientable
 since the sign of the jacobians are positive.
@@ -5501,7 +5465,6 @@ Sections of $Q(M)$ are called {\rm densities} on $M$.
 
 Now we are going to see how the densities change
 when the coordinates change. Let $\sigma \colon M \to Q(M)$ be a density
-
 on $M$
 and let $(U_{\alpha},\psi_{\alpha})$ be an atlas of $M$.
 Put $\psi_{\alpha} \equiv \{ \psi_{\alpha}^1 \ldots \psi_{\alpha}^n \}$.
@@ -5648,7 +5611,7 @@ sections of
 $N^{1/2}$ and $| N |$ on $\Cinfty(M)\otimes\Complex$.
 \label{propi1}
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 {\it (a)} \quad
 $\sigma \sigma '^*$ is $\bar \rho$-projectable.
 
@@ -5811,7 +5774,7 @@ X_a \bar \rho (\sigma \sigma '^*) =
 \bar \rho (\sigma \Lie(\bar X) \sigma '^*)](a)
 \eeann
 \qed
-Observe that, in general, the equality
+\noindent Observe that, in general, the equality
 $$
 \Lie(X) \langle \sigma ,\sigma ' \rangle =
 \langle \Lie(\bar X)  \sigma , \sigma ' \rangle +
@@ -5867,7 +5830,7 @@ bundle.
 \begin{prop}
 $| N |$ is diffeomorphic to the bundle of complex densities of $M$.
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 The bundle of complex densities  of $M$ is $Q(M) \otimes_{\Real}
 \Complex$.
 In order to prove that they are diffeomorphic, we must see that they
@@ -5909,7 +5872,6 @@ of the absolute values of the skew symmetric contravariant tensors of
 higher degree.
 
 Now, let $X$ be a real vector field in $M$. It can be lifted to a vector
-
 field in $\bar P^*$
 in the following way:
 Let $\tau_t$ be a local uniparametric group associated with $X$.
@@ -5928,7 +5890,6 @@ P^*$.
 In order to construct $\bar X$ it suffices to do it in basic open sets
 of a covering.
 Observe that the so-obtained vector field $\bar X$ is $\ML$-invariant by
-
 construction.
 
 If $X$ is a complex vector field, it suffices to take its real and
@@ -5963,7 +5924,6 @@ Denote by ${\cal X}^{\Complex}({\cal P})$ the set of these vector
 fields.
 If $\tau_t$ is a local uniparametric group associated with $X$ and
 $\Tan \tau_t$ its lifting to $\Tan M^{\Complex}$, we can obtain a vector
-
 field
 $\tilde X \in {\cal X}(\Tan M^{\Complex})$ associated with the group
 $\Tan \tau_t$.
@@ -6038,7 +5998,7 @@ If $X \equiv X_f$ is a Hamiltonian vector field then $F_{\alpha} =
 G_{\alpha}$
 \label{fg}
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 If $\tilde X$ is the canonical lift of $X$ to $P$, we have that
 \beann
 F_{\alpha}(x) &:=&
@@ -6084,7 +6044,7 @@ Hamiltonian vector fields.
 Then, $\tilde X_f$ is tangent to the image of~$\sigma$, for every
 $f\in\Cinfty (M)$.
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 If $\tau$ is the local uniparametric group associated with $X_f$,
 then $\Tan\tau$ lets invariant the vector fields $X_{f_i}$,
 hence the integral curves of $\tilde X$
@@ -6126,7 +6086,6 @@ be the dual $\Complex$-basis. Then:
 \begin{prop}
 For every complex density $\bar \alpha\in{\cal D}$,
 let $\{ X_x^1,\ldots ,X_x^n \}$ be a reference of $D_x$ (that is a point
-
 of $P$).
 Define a map $\varphi\colon \{\bar\alpha\} \to \Gamma(M,| N |)$,
 such that $\alpha :=\varphi (\bar \alpha)$, as follows
@@ -6146,7 +6105,7 @@ $Im \varphi =\{ \alpha \colon P \to \Complex \ \mid \ \alpha \in
 D (loc. Hamiltonian)} \}$
 \end{description}
 \end{prop}
-{\bf Proof}: 
+\noindent{\bf Proof}: 
 {\it (i)} \ \
 We have to see that the so-defined function satisfies that
 $$
@@ -6235,7 +6194,6 @@ $$
 which is constant when $y$ varies in $U \cap V_x$, as we wanted to
 prove.
 
-\qquad \qquad \
 Conversely, consider $\alpha \in \Gamma(M,| N |)$, $\alpha \colon P \to
 \Complex$,
 satisfying that $\Lie(X)\alpha = 0$
@@ -6330,7 +6288,6 @@ Let $\pi \colon L \to M$ be a complex line bundle endowed with a
 hermitian connection $\nabla$ with curvature $2$-form
 $\frac{{\bf \Omega}}{2\pi\hbar}$.
 Suppose that $M$ is also endowed with a polarization ${\cal P}$ and that
-
 the
 frame bundle of ${\cal P}$, $p \colon P \to M$,
 admits a metalinear bundle $\bar p \colon \bar P \to M$.
@@ -6410,10 +6367,9 @@ $$
 \end{array}
 $$
 is well defined and satisfies the conditions (b(iii)) and (b(iv)) of the
-
 definition \ref{fquan}.
 \end{teor}
-{\it (Proof} \quad
+\noindent{\bf Proof}:
 In order to see that ${\cal Q}$ is well defined we have to prove that
 \begin{enumerate}
 \item
@@ -6544,7 +6500,6 @@ sections of $L$.
 This consists of taking sections of the form $fs_0$ where $f$ is a
 distribution in $M$.
 In this way, we will arrive now to the same equation (\ref{eqcla}) which
-
 has solution.
 In fact, we can prove a solution of the form
 $f(r,\Theta)=g(r)e^{ik\Theta}$, with $k \in \Real$ and $g(r)$
@@ -6740,7 +6695,6 @@ obtain that $\Lie(X_H)\sigma_2 = 0$ in $U_2$.
 
 The conditions on $f_is_0$ give again the equation (\ref{eqcla}),
 therefore $H^{\cal P}=0$ unless we work with distribution sections as in
-
 the above case.
 
 For other examples see \cite{Sn-80}, \cite{Tu-85}, \cite{Wo-80}.
@@ -6805,7 +6759,6 @@ Geometric quantization via gauge fixing conditions
 is not the most suitable way
 The most usual forms of quantizing
 a constrained system consist in using the reduced or some extended phase
-
 space,
 and these are the only cases that we discuss here
 (comments and results on this subject can be found in \cite{Sn-83}).
@@ -6856,7 +6809,6 @@ although, in these cases, $C$ must be a coisotropic submanifold of $M$.
 If $C$ is not coisotropically imbedded in $M$, then
 second class constraints must be previously removed in order to achieve
 a consistent quantization; and then the Poisson bracket must be replaced
-
 by
 a new operation called {\it Dirac bracket}.
 In geometrical terms, this correspond to take
@@ -6917,7 +6869,6 @@ of a constrained system. In fact:
 \begin{enumerate}
 \item
 In some cases, to quantize both the reduced and the extended phase space
-
 simultaneously is not always possible, since:
 \ben
 \item
@@ -6980,7 +6931,6 @@ is a cotangent bundle;
 showing that, under some general hypothesis, reduction and quantization
 commute.
 In relation to this last case, in \cite{DET-90}, some examples for which
-
 these
 hypothesis do not hold are discussed (and then, the problem
 of quantization is solved in the ambient of the BRST theory).
@@ -7084,7 +7034,6 @@ then
 (\psi_{\alpha}(a_1),q_1) =
 (\psi_{\alpha} \times id)(a_1,q_1)
 \eeann
-
 Imposing the condition of $\varphi_{\alpha}$
 to be diffeomorphisms,
 we obtain on $\pi^{-1}(U_{\alpha})$
