--- a/2010.15419/geometric_quantization.tex
+++ b/2010.15419/geometric_quantization.tex
@@ -9,14 +9,53 @@
 
 %% This has a default type size 10pt.  Other options are 11pt and 12pt
 %% This are set by replacing the command above by
-\documentclass[11pt]{amsart}
+\documentclass[12pt]{amsart}
 %\usepackage[foot]{amsaddr}
 \usepackage{extsizes}
 \usepackage[applemac]{inputenc}
 \usepackage[titletoc]{appendix}
 %\usepackage{MnSymbol}
-\usepackage{pxfonts}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[full]{textcomp}
+\usepackage[osf]{XCharter}% lining figures in math, osf in text
+\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
+\usepackage[cal=cm,scr=esstix]{mathalpha}
+\usepackage{eulervm}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \usepackage[backend=biber, style=numeric, date=year, url=false, doi=false, isbn=false, eprint=true, firstinits=true, maxcitenames=5, maxbibnames=5, style=alphabetic]{biblatex}
 \AtEveryBibitem{%
   \ifentrytype{online}{%
@@ -47,13 +86,13 @@
 \usepackage{shadethm}
 %\usepackage{layout}
 \usepackage{subfigure}
-\usepackage[mathcal]{euscript}
+%\usepackage[mathcal]{euscript}
 \usepackage{epigraph}
 \usepackage[T1]{fontenc}
 %\usepackage[utf8]{inputenc}
 %\usepackage{bm}
 
-\usepackage{tgpagella}
+%\usepackage{tgpagella}
 %\usepackage[includeheadfoot,margin=1.5in]{geometry}
 %\usetikzlibrary{shapes}
 
@@ -143,8 +182,6 @@ gluon/.style={decorate, draw=black,
 %\usepackage{graphics}
 \usepackage{url}
 %\usepackage[citecolor=blue]{hyperref}
-\usepackage{hyperref}
-\hypersetup{colorlinks=true, citecolor=purple, linktocpage, linkcolor=blue, urlcolor=cyan} 
 
 % citebordercolor=green, filebordercolor=red, , pdfborderstyle={/S/U/W 1}}
 
@@ -658,8 +695,11 @@ These notes give an introduction to the quantization procedure called \emph{geom
 % These notes are inspired by the course ``Introduction to Geometric Quantization'' held at the University of Zurich in Spring 2018.
 \end{abstract}
 
+\newpage
+
 \tableofcontents
 
+\newpage
 
 \section{Motivation}
 Quantization procedures are of strong mathematical interest and there are different approaches to quantization. \emph{Geometric quantization} \cite{GuilleminSternberg1982,Kir85,Wood97,BatesWeinstein2012} lies the focus on constructing the mathematical structure of a Hilbert space by constructing a certain line bundle with a particular type of connection, whereas e.g. \emph{deformation quantization} \cite{Weyl1931,Moy,DeWildeLecomte1983,Fedosov1994,K,CalaquePantevToenVaquieVezzosi2017} uses the noncommutativity structure of quantum observables, where it deforms the classical product on the Poisson algebra to a star product (see e.g. \cite{GuttRawnsleySternheimer2005}). However, there the Hilbert space of states is not constructed explicitly, which is of importance to understand perturbative quantum field theories also in relation to the Atyiah--Segal formulation \cite{Atiyah1988,Segal1988} of topological quantum field theories. 
@@ -858,8 +898,9 @@ $f,g$ conserved implies $\{f,g\}$ is conserved.
 
 \subsection{Symplectic vector spaces} Let $V$ be a finite-dimensional vector space over $k=\R$ or $\mathbb{C}$. Denote by $V^*$ the dual of $V$. An element of $V^*$ is a $k$-linear map $f\colon V\to k$. Let $0\leq m\leq \dim V$. Define 
 \begin{multline*}
-\bigwedge^mV^*:=\Big\{\phi\colon \overbrace{V\times\dotsm \times V}^{m}\to k\,\,\big|\,\, \text{ $\phi$ is linear in each argument and $\phi$ is alternating,}\\
-\text{ i.e. $\phi(v_1,...,v_j,v_{j+1},...,v_m)=-\phi(v_1,...,v_{j+1},v_j,...,v_m)$ for all $j=1,...,m-1$}\Big\}
+\bigwedge^mV^*:=\Big\{\phi\colon \overbrace{V\times\dotsm \times V}^{m}\to k\,\,\big|\,\, \\ \text{ $\phi$ is linear in each argument and $\phi$ is alternating,  i.e. }\\
+\text{ $\phi(v_1,...,v_j,v_{j+1},...,v_m)=-\phi(v_1,...,v_{j+1},v_j,...,v_m)$}\\
+\text{ for all $j=1,...,m-1$}\Big\}
 \end{multline*}
 
 \begin{ex}
@@ -1890,10 +1931,10 @@ Let $L\xrightarrow{\pi}M$ be a line bundle with a connection $\nabla$. Then, usi
 
 \subsubsection{Curvature of a connection}
 Let $(L,\nabla)$ be a line bundle with connection over $M$. We define the \emph{curvature} $R^\nabla$ of $\nabla$ as the map:
-\begin{align*} 
-R^\nabla\colon \Gamma(M,TM)\times\Gamma(M,TM)\times \Gamma(M,L)&\to \Gamma(M,L)\\
-(X,Y,s)&\mapsto R^\nabla(X,Y)s:=\I\left(\nabla_X\nabla_Y-\nabla_Y\nabla_X-\nabla_{[X,Y]}\right)s
-\end{align*}
+\begin{multline*} 
+R^\nabla\colon \Gamma(M,TM)\times\Gamma(M,TM)\times \Gamma(M,L)\to \Gamma(M,L)\\
+(X,Y,s)\mapsto R^\nabla(X,Y)s:=\I\left(\nabla_X\nabla_Y-\nabla_Y\nabla_X-\nabla_{[X,Y]}\right)s
+\end{multline*}
 Unlike the connection $\nabla$, $R^\nabla(X,Y)\colon \Gamma(M,L)\to \Gamma(M,L)$ is $C^\infty(M)$-linear and hence defines a map $R^\nabla\colon \Gamma(M,TM)\times\Gamma(M,TM)\to \Gamma(M,\End(L))$, which is $C^\infty(M)$-linear and alternating. Note that to any line bundle $\End(L)$ is again a line bundle and is trivializable (indeed, the map $x\mapsto \id_x\colon L_x\to L_x$ defines a nowhere vanishing section of $\End(L)$). The bundle $\End(L)$ over $M$ is called the \emph{endomorphism bundle} of $L$. This implies that $\Gamma(M,\End(L))$ can be identified with $C^\infty(M)$. Hence, $R^\nabla\colon \Gamma(M,TM)\times \Gamma(M,TM)\to C^\infty(M)$ is bilinear and alternating and thus $R^\nabla$ can be identified with a $2$-form on $M$.
 
 \begin{defn}[Prequantizable]
