--- a/2010.15419/geometric_quantization-pal.tex
+++ b/2010.15419/geometric_quantization-pal.tex
@@ -32,6 +32,7 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
+\usepackage{eulervm}
 \usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
