--- a/2101.10873/main-012521.tex
+++ b/2101.10873/main-012521.tex
@@ -1,4 +1,4 @@
-\documentclass[onecolumn,prx,amsmath,amssymb]{revtex4-2}
+\documentclass[onecolumn,prx,amsmath,amssymb,12pt]{revtex4-2}
 \usepackage{enumitem}
 \usepackage{graphicx}
 \usepackage{float}
@@ -7,7 +7,6 @@
 \usepackage{color}
 \usepackage{xcolor}
 \usepackage{bbm}
-\usepackage{hyperref}
 %\usepackage[lite]{mtpro2}
 \usepackage{changes}
 \usepackage{lipsum}
@@ -16,7 +15,44 @@
 
 \usepackage{calrsfs}
 \DeclareMathAlphabet{\pazocal}{OMS}{zplm}{m}{n}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \newcommand\setItemnumber[1]{\setcounter{enumi}{\numexpr#1-1\relax}}
 
@@ -83,7 +119,6 @@ $^5$ICREA-Instituci\`o Catalana de Recerca i Estudis Avançats, Lluis Companys 2
 
 \begin{abstract}
 Complex numbers, i.e., numbers with a real and an imaginary part, are essential for mathematical analysis, while their role in other subjects, such as electromagnetism or special relativity, is far less fundamental. Quantum physics is the only physical theory where these numbers seem to play an indispensible role, as the theory is explicitly formulated in terms of operators acting on complex Hilbert spaces. The occurrence of complex numbers within the quantum formalism has nonetheless puzzled countless physicists, including the fathers of the theory, for whom a real version of quantum physics, where states and observables are represented by real operators, seemed much more natural. In fact, previous works showed that such ``real quantum physics'' can reproduce the outcomes of any multipartite experiment, as long as the parts share arbitrary real quantum states. Thus, are complex numbers really needed for a quantum description of nature? Here, we show this to be case by proving that real and complex quantum physics make different predictions in network scenarios comprising independent quantum state sources. This allows us to devise a Bell-type quantum experiment whose input-output correlations cannot be approximated by any real quantum model. The successful realization of such an experiment would disprove real quantum physics, in the same way as standard Bell experiments disproved local  physics.
-\\
 \end{abstract}
 \maketitle
 \begin{quote}
@@ -91,6 +126,8 @@ Complex numbers, i.e., numbers with a real and an imaginary part, are essential 
 
 Letter from Schr\"{o}dinger to Lorentz \cite{einstein2011letters}. June $6^{th}$, 1926.    
 \end{quote}
+
+\newpage
 
 Numbers are there to count. Initially, to count sheep and hectares: $1,2,3,...$. Such considerations gave birth to the notion of natural as well as rational numbers. From the middle ages into the renaissance, these numbers were extended into what is known today as the real numbers; that is numbers with any sequence of digits after the dot. With the arrival of Newton and Leibniz, real numbers enabled the invention of calculus to compute changes in the position and velocity of objects. Meanwhile, mathematicians had started playing with numbers for the sake of their beauty. Solutions of simple equations like, e.g. $x^2=2$, had introduced irrational numbers in the Classical Greece. How about $x^2=-1$? At first sight, this equation has no solution, because the square of a real number cannot be negative. Equations without solutions are, however, inconvenient. Hence, mathematicians invented new numbers, today known as complex numbers.
 
